test/parser/basic/027.hac
// "027.hac"
// type: ICE-on-invalid

bool a[2}];

